y.output
Terminals unused in grammar

    T_OROR
    T_ANDAND
    T_LEFTSHIFT
    T_RIGHTSHIFT
    T_PRINTLN
    T_STRING
    T_BOOLEAN
    T_PRINTFF
    T_SCANFF
    T_TRUE
    T_FALSE
    T_CASE
    T_SWITCH
    T_DEFAULT


Grammar

    0 $accept: START $end

    1 START: PROG

    2 $@1: ε

    3 START: T_INCLUDE '<' T_HEADER $@1 '>' PROG

    4 PROG: MAIN PROG
    5     | DECLR ';' PROG
    6     | ASSGN ';' PROG
    7     | ε

    8 DECLR: TYPE LISTVAR

    9 LISTVAR: LISTVAR ',' VAR
   10        | VAR

   11 VAR: ASSGN
   12    | T_ID
   13    | T_ID '[' EXPR ']' DIMS

   14 DIMS: '[' EXPR ']' DIMS
   15     | ε

   16 TYPE: T_INT
   17     | T_FLOAT
   18     | T_DOUBLE
   19     | T_CHAR
   20     | T_VOID

   21 ASSGN: T_ID '=' EXPR
   22      | T_ID '=' UNARYEXPR
   23      | T_ID '[' EXPR ']' DIMS '=' EXPR
   24      | T_ID '[' EXPR ']' DIMS '=' UNARYEXPR
   25      | T_ID '[' EXPR ']' DIMS '=' ARRDEF
   26      | T_ID T_SQBRACK '=' ARRDEF

   27 ARRELEM: EXPR ',' ARRELEM
   28        | EXPR
   29        | ε

   30 ARRDEF: '{' ARRELEM '}'

   31 UNARYEXPR: T_INC E
   32          | T_DEC E
   33          | E T_INC
   34          | E T_DEC

   35 EXPR: LOGIC_EXPR

   36 LOGIC_EXPR: LOGIC_EXPR T_LOGOR AND_EXPR
   37           | AND_EXPR

   38 AND_EXPR: AND_EXPR T_LOGAND REL_EXPR
   39         | REL_EXPR

   40 REL_EXPR: REL_EXPR REL_OP E
   41         | E

   42 E: E '+' T
   43  | E '-' T
   44  | T

   45 T: T '*' F
   46  | T '/' F
   47  | F

   48 F: '(' EXPR ')'
   49  | '!' F
   50  | T_ID
   51  | T_NUM
   52  | T_STRLITERAL

   53 REL_OP: T_LESSEREQ
   54       | T_GREATEREQ
   55       | '<'
   56       | '>'
   57       | T_EQCOMP
   58       | T_NOTEQUAL

   59 $@2: ε

   60 $@3: ε

   61 MAIN: TYPE T_MAIN $@2 '(' EMPTY_LISTVAR ')' '{' $@3 STMT '}'

   62 EMPTY_LISTVAR: LISTVAR
   63              | ε

   64 STMT: STMT_NO_BLOCK STMT
   65     | BLOCK STMT
   66     | ε

   67 STMT_NO_BLOCK: DECLR ';'
   68              | ASSGN ';'
   69              | UNARYEXPR ';'
   70              | T_FOR '(' DECLR ';' EXPR ';' UNARYEXPR ')' BLOCK
   71              | T_DO BLOCK T_WHILE '(' EXPR ')' ';'
   72              | T_IF '(' EXPR ')' BLOCK ELSE
   73              | T_RETURN EXPR ';'
   74              | T_WHILE '(' EXPR ')' BLOCK
   75              | T_BREAK ';'
   76              | T_CONTINUE ';'

   77 ELSE: T_ELSE BLOCK
   78     | ε

   79 $@4: ε

   80 BLOCK: '{' $@4 STMT '}'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 49
    '(' (40) 48 61 70 71 72 74
    ')' (41) 48 61 70 71 72 74
    '*' (42) 45
    '+' (43) 42
    ',' (44) 9 27
    '-' (45) 43
    '/' (47) 46
    ';' (59) 5 6 67 68 69 70 71 73 75 76
    '<' (60) 3 55
    '=' (61) 21 22 23 24 25 26
    '>' (62) 3 56
    '[' (91) 13 14 23 24 25
    ']' (93) 13 14 23 24 25
    '{' (123) 30 61 80
    '}' (125) 30 61 80
    error (256)
    T_INT (258) 16
    T_CHAR (259) 19
    T_DOUBLE (260) 18
    T_WHILE (261) 71 74
    T_INC (262) 31 33
    T_DEC (263) 32 34
    T_OROR (264)
    T_ANDAND (265)
    T_EQCOMP (266) 57
    T_NOTEQUAL (267) 58
    T_GREATEREQ (268) 54
    T_LESSEREQ (269) 53
    T_LEFTSHIFT (270)
    T_RIGHTSHIFT (271)
    T_PRINTLN (272)
    T_STRING (273)
    T_FLOAT (274) 17
    T_BOOLEAN (275)
    T_IF (276) 72
    T_ELSE (277) 77
    T_STRLITERAL (278) 52
    T_DO (279) 71
    T_INCLUDE (280) 3
    T_HEADER (281) 3
    T_MAIN (282) 61
    T_ID (283) 12 13 21 22 23 24 25 26 50
    T_NUM (284) 51
    T_PRINTFF (285)
    T_SCANFF (286)
    T_VOID (287) 20
    T_RETURN (288) 73
    T_FOR (289) 70
    T_TRUE (290)
    T_FALSE (291)
    T_LOGAND (292) 38
    T_LOGOR (293) 36
    T_SQBRACK (294) 26
    T_BREAK (295) 75
    T_CONTINUE (296) 76
    T_CASE (297)
    T_SWITCH (298)
    T_DEFAULT (299)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    START (62)
        on left: 1 3
        on right: 0
    $@1 (63)
        on left: 2
        on right: 3
    PROG (64)
        on left: 4 5 6 7
        on right: 1 3 4 5 6
    DECLR (65)
        on left: 8
        on right: 5 67 70
    LISTVAR (66)
        on left: 9 10
        on right: 8 9 62
    VAR (67)
        on left: 11 12 13
        on right: 9 10
    DIMS (68)
        on left: 14 15
        on right: 13 14 23 24 25
    TYPE (69)
        on left: 16 17 18 19 20
        on right: 8 61
    ASSGN (70)
        on left: 21 22 23 24 25 26
        on right: 6 11 68
    ARRELEM (71)
        on left: 27 28 29
        on right: 27 30
    ARRDEF (72)
        on left: 30
        on right: 25 26
    UNARYEXPR (73)
        on left: 31 32 33 34
        on right: 22 24 69 70
    EXPR (74)
        on left: 35
        on right: 13 14 21 23 24 25 27 28 48 70 71 72 73 74
    LOGIC_EXPR (75)
        on left: 36 37
        on right: 35 36
    AND_EXPR (76)
        on left: 38 39
        on right: 36 37 38
    REL_EXPR (77)
        on left: 40 41
        on right: 38 39 40
    E (78)
        on left: 42 43 44
        on right: 31 32 33 34 40 41 42 43
    T (79)
        on left: 45 46 47
        on right: 42 43 44 45 46
    F (80)
        on left: 48 49 50 51 52
        on right: 45 46 47 49
    REL_OP (81)
        on left: 53 54 55 56 57 58
        on right: 40
    MAIN (82)
        on left: 61
        on right: 4
    $@2 (83)
        on left: 59
        on right: 61
    $@3 (84)
        on left: 60
        on right: 61
    EMPTY_LISTVAR (85)
        on left: 62 63
        on right: 61
    STMT (86)
        on left: 64 65 66
        on right: 61 64 65 80
    STMT_NO_BLOCK (87)
        on left: 67 68 69 70 71 72 73 74 75 76
        on right: 64
    ELSE (88)
        on left: 77 78
        on right: 72
    BLOCK (89)
        on left: 80
        on right: 65 70 71 72 74 77
    $@4 (90)
        on left: 79
        on right: 80


State 0

    0 $accept: • START $end

    T_INT      shift, and go to state 1
    T_CHAR     shift, and go to state 2
    T_DOUBLE   shift, and go to state 3
    T_FLOAT    shift, and go to state 4
    T_INCLUDE  shift, and go to state 5
    T_ID       shift, and go to state 6
    T_VOID     shift, and go to state 7

    $default  reduce using rule 7 (PROG)

    START  go to state 8
    PROG   go to state 9
    DECLR  go to state 10
    TYPE   go to state 11
    ASSGN  go to state 12
    MAIN   go to state 13


State 1

   16 TYPE: T_INT •

    $default  reduce using rule 16 (TYPE)


State 2

   19 TYPE: T_CHAR •

    $default  reduce using rule 19 (TYPE)


State 3

   18 TYPE: T_DOUBLE •

    $default  reduce using rule 18 (TYPE)


State 4

   17 TYPE: T_FLOAT •

    $default  reduce using rule 17 (TYPE)


State 5

    3 START: T_INCLUDE • '<' T_HEADER $@1 '>' PROG

    '<'  shift, and go to state 14


State 6

   21 ASSGN: T_ID • '=' EXPR
   22      | T_ID • '=' UNARYEXPR
   23      | T_ID • '[' EXPR ']' DIMS '=' EXPR
   24      | T_ID • '[' EXPR ']' DIMS '=' UNARYEXPR
   25      | T_ID • '[' EXPR ']' DIMS '=' ARRDEF
   26      | T_ID • T_SQBRACK '=' ARRDEF

    T_SQBRACK  shift, and go to state 15
    '['        shift, and go to state 16
    '='        shift, and go to state 17


State 7

   20 TYPE: T_VOID •

    $default  reduce using rule 20 (TYPE)


State 8

    0 $accept: START • $end

    $end  shift, and go to state 18


State 9

    1 START: PROG •

    $default  reduce using rule 1 (START)


State 10

    5 PROG: DECLR • ';' PROG

    ';'  shift, and go to state 19


State 11

    8 DECLR: TYPE • LISTVAR
   61 MAIN: TYPE • T_MAIN $@2 '(' EMPTY_LISTVAR ')' '{' $@3 STMT '}'

    T_MAIN  shift, and go to state 20
    T_ID    shift, and go to state 21

    LISTVAR  go to state 22
    VAR      go to state 23
    ASSGN    go to state 24


State 12

    6 PROG: ASSGN • ';' PROG

    ';'  shift, and go to state 25


State 13

    4 PROG: MAIN • PROG

    T_INT     shift, and go to state 1
    T_CHAR    shift, and go to state 2
    T_DOUBLE  shift, and go to state 3
    T_FLOAT   shift, and go to state 4
    T_ID      shift, and go to state 6
    T_VOID    shift, and go to state 7

    $default  reduce using rule 7 (PROG)

    PROG   go to state 26
    DECLR  go to state 10
    TYPE   go to state 11
    ASSGN  go to state 12
    MAIN   go to state 13


State 14

    3 START: T_INCLUDE '<' • T_HEADER $@1 '>' PROG

    T_HEADER  shift, and go to state 27


State 15

   26 ASSGN: T_ID T_SQBRACK • '=' ARRDEF

    '='  shift, and go to state 28


State 16

   23 ASSGN: T_ID '[' • EXPR ']' DIMS '=' EXPR
   24      | T_ID '[' • EXPR ']' DIMS '=' UNARYEXPR
   25      | T_ID '[' • EXPR ']' DIMS '=' ARRDEF

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    EXPR        go to state 34
    LOGIC_EXPR  go to state 35
    AND_EXPR    go to state 36
    REL_EXPR    go to state 37
    E           go to state 38
    T           go to state 39
    F           go to state 40


State 17

   21 ASSGN: T_ID '=' • EXPR
   22      | T_ID '=' • UNARYEXPR

    T_INC         shift, and go to state 41
    T_DEC         shift, and go to state 42
    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    UNARYEXPR   go to state 43
    EXPR        go to state 44
    LOGIC_EXPR  go to state 35
    AND_EXPR    go to state 36
    REL_EXPR    go to state 37
    E           go to state 45
    T           go to state 39
    F           go to state 40


State 18

    0 $accept: START $end •

    $default  accept


State 19

    5 PROG: DECLR ';' • PROG

    T_INT     shift, and go to state 1
    T_CHAR    shift, and go to state 2
    T_DOUBLE  shift, and go to state 3
    T_FLOAT   shift, and go to state 4
    T_ID      shift, and go to state 6
    T_VOID    shift, and go to state 7

    $default  reduce using rule 7 (PROG)

    PROG   go to state 46
    DECLR  go to state 10
    TYPE   go to state 11
    ASSGN  go to state 12
    MAIN   go to state 13


State 20

   61 MAIN: TYPE T_MAIN • $@2 '(' EMPTY_LISTVAR ')' '{' $@3 STMT '}'

    $default  reduce using rule 59 ($@2)

    $@2  go to state 47


State 21

   12 VAR: T_ID •
   13    | T_ID • '[' EXPR ']' DIMS
   21 ASSGN: T_ID • '=' EXPR
   22      | T_ID • '=' UNARYEXPR
   23      | T_ID • '[' EXPR ']' DIMS '=' EXPR
   24      | T_ID • '[' EXPR ']' DIMS '=' UNARYEXPR
   25      | T_ID • '[' EXPR ']' DIMS '=' ARRDEF
   26      | T_ID • T_SQBRACK '=' ARRDEF

    T_SQBRACK  shift, and go to state 15
    '['        shift, and go to state 48
    '='        shift, and go to state 17

    $default  reduce using rule 12 (VAR)


State 22

    8 DECLR: TYPE LISTVAR •
    9 LISTVAR: LISTVAR • ',' VAR

    ','  shift, and go to state 49

    $default  reduce using rule 8 (DECLR)


State 23

   10 LISTVAR: VAR •

    $default  reduce using rule 10 (LISTVAR)


State 24

   11 VAR: ASSGN •

    $default  reduce using rule 11 (VAR)


State 25

    6 PROG: ASSGN ';' • PROG

    T_INT     shift, and go to state 1
    T_CHAR    shift, and go to state 2
    T_DOUBLE  shift, and go to state 3
    T_FLOAT   shift, and go to state 4
    T_ID      shift, and go to state 6
    T_VOID    shift, and go to state 7

    $default  reduce using rule 7 (PROG)

    PROG   go to state 50
    DECLR  go to state 10
    TYPE   go to state 11
    ASSGN  go to state 12
    MAIN   go to state 13


State 26

    4 PROG: MAIN PROG •

    $default  reduce using rule 4 (PROG)


State 27

    3 START: T_INCLUDE '<' T_HEADER • $@1 '>' PROG

    $default  reduce using rule 2 ($@1)

    $@1  go to state 51


State 28

   26 ASSGN: T_ID T_SQBRACK '=' • ARRDEF

    '{'  shift, and go to state 52

    ARRDEF  go to state 53


State 29

   52 F: T_STRLITERAL •

    $default  reduce using rule 52 (F)


State 30

   50 F: T_ID •

    $default  reduce using rule 50 (F)


State 31

   51 F: T_NUM •

    $default  reduce using rule 51 (F)


State 32

   48 F: '(' • EXPR ')'

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    EXPR        go to state 54
    LOGIC_EXPR  go to state 35
    AND_EXPR    go to state 36
    REL_EXPR    go to state 37
    E           go to state 38
    T           go to state 39
    F           go to state 40


State 33

   49 F: '!' • F

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    F  go to state 55


State 34

   23 ASSGN: T_ID '[' EXPR • ']' DIMS '=' EXPR
   24      | T_ID '[' EXPR • ']' DIMS '=' UNARYEXPR
   25      | T_ID '[' EXPR • ']' DIMS '=' ARRDEF

    ']'  shift, and go to state 56


State 35

   35 EXPR: LOGIC_EXPR •
   36 LOGIC_EXPR: LOGIC_EXPR • T_LOGOR AND_EXPR

    T_LOGOR  shift, and go to state 57

    $default  reduce using rule 35 (EXPR)


State 36

   37 LOGIC_EXPR: AND_EXPR •
   38 AND_EXPR: AND_EXPR • T_LOGAND REL_EXPR

    T_LOGAND  shift, and go to state 58

    $default  reduce using rule 37 (LOGIC_EXPR)


State 37

   39 AND_EXPR: REL_EXPR •
   40 REL_EXPR: REL_EXPR • REL_OP E

    T_EQCOMP     shift, and go to state 59
    T_NOTEQUAL   shift, and go to state 60
    T_GREATEREQ  shift, and go to state 61
    T_LESSEREQ   shift, and go to state 62
    '<'          shift, and go to state 63
    '>'          shift, and go to state 64

    $default  reduce using rule 39 (AND_EXPR)

    REL_OP  go to state 65


State 38

   41 REL_EXPR: E •
   42 E: E • '+' T
   43  | E • '-' T

    '+'  shift, and go to state 66
    '-'  shift, and go to state 67

    $default  reduce using rule 41 (REL_EXPR)


State 39

   44 E: T •
   45 T: T • '*' F
   46  | T • '/' F

    '*'  shift, and go to state 68
    '/'  shift, and go to state 69

    $default  reduce using rule 44 (E)


State 40

   47 T: F •

    $default  reduce using rule 47 (T)


State 41

   31 UNARYEXPR: T_INC • E

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    E  go to state 70
    T  go to state 39
    F  go to state 40


State 42

   32 UNARYEXPR: T_DEC • E

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    E  go to state 71
    T  go to state 39
    F  go to state 40


State 43

   22 ASSGN: T_ID '=' UNARYEXPR •

    $default  reduce using rule 22 (ASSGN)


State 44

   21 ASSGN: T_ID '=' EXPR •

    $default  reduce using rule 21 (ASSGN)


State 45

   33 UNARYEXPR: E • T_INC
   34          | E • T_DEC
   41 REL_EXPR: E •
   42 E: E • '+' T
   43  | E • '-' T

    T_INC  shift, and go to state 72
    T_DEC  shift, and go to state 73
    '+'    shift, and go to state 66
    '-'    shift, and go to state 67

    $default  reduce using rule 41 (REL_EXPR)


State 46

    5 PROG: DECLR ';' PROG •

    $default  reduce using rule 5 (PROG)


State 47

   61 MAIN: TYPE T_MAIN $@2 • '(' EMPTY_LISTVAR ')' '{' $@3 STMT '}'

    '('  shift, and go to state 74


State 48

   13 VAR: T_ID '[' • EXPR ']' DIMS
   23 ASSGN: T_ID '[' • EXPR ']' DIMS '=' EXPR
   24      | T_ID '[' • EXPR ']' DIMS '=' UNARYEXPR
   25      | T_ID '[' • EXPR ']' DIMS '=' ARRDEF

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    EXPR        go to state 75
    LOGIC_EXPR  go to state 35
    AND_EXPR    go to state 36
    REL_EXPR    go to state 37
    E           go to state 38
    T           go to state 39
    F           go to state 40


State 49

    9 LISTVAR: LISTVAR ',' • VAR

    T_ID  shift, and go to state 21

    VAR    go to state 76
    ASSGN  go to state 24


State 50

    6 PROG: ASSGN ';' PROG •

    $default  reduce using rule 6 (PROG)


State 51

    3 START: T_INCLUDE '<' T_HEADER $@1 • '>' PROG

    '>'  shift, and go to state 77


State 52

   30 ARRDEF: '{' • ARRELEM '}'

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    $default  reduce using rule 29 (ARRELEM)

    ARRELEM     go to state 78
    EXPR        go to state 79
    LOGIC_EXPR  go to state 35
    AND_EXPR    go to state 36
    REL_EXPR    go to state 37
    E           go to state 38
    T           go to state 39
    F           go to state 40


State 53

   26 ASSGN: T_ID T_SQBRACK '=' ARRDEF •

    $default  reduce using rule 26 (ASSGN)


State 54

   48 F: '(' EXPR • ')'

    ')'  shift, and go to state 80


State 55

   49 F: '!' F •

    $default  reduce using rule 49 (F)


State 56

   23 ASSGN: T_ID '[' EXPR ']' • DIMS '=' EXPR
   24      | T_ID '[' EXPR ']' • DIMS '=' UNARYEXPR
   25      | T_ID '[' EXPR ']' • DIMS '=' ARRDEF

    '['  shift, and go to state 81

    $default  reduce using rule 15 (DIMS)

    DIMS  go to state 82


State 57

   36 LOGIC_EXPR: LOGIC_EXPR T_LOGOR • AND_EXPR

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    AND_EXPR  go to state 83
    REL_EXPR  go to state 37
    E         go to state 38
    T         go to state 39
    F         go to state 40


State 58

   38 AND_EXPR: AND_EXPR T_LOGAND • REL_EXPR

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    REL_EXPR  go to state 84
    E         go to state 38
    T         go to state 39
    F         go to state 40


State 59

   57 REL_OP: T_EQCOMP •

    $default  reduce using rule 57 (REL_OP)


State 60

   58 REL_OP: T_NOTEQUAL •

    $default  reduce using rule 58 (REL_OP)


State 61

   54 REL_OP: T_GREATEREQ •

    $default  reduce using rule 54 (REL_OP)


State 62

   53 REL_OP: T_LESSEREQ •

    $default  reduce using rule 53 (REL_OP)


State 63

   55 REL_OP: '<' •

    $default  reduce using rule 55 (REL_OP)


State 64

   56 REL_OP: '>' •

    $default  reduce using rule 56 (REL_OP)


State 65

   40 REL_EXPR: REL_EXPR REL_OP • E

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    E  go to state 85
    T  go to state 39
    F  go to state 40


State 66

   42 E: E '+' • T

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    T  go to state 86
    F  go to state 40


State 67

   43 E: E '-' • T

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    T  go to state 87
    F  go to state 40


State 68

   45 T: T '*' • F

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    F  go to state 88


State 69

   46 T: T '/' • F

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    F  go to state 89


State 70

   31 UNARYEXPR: T_INC E •
   42 E: E • '+' T
   43  | E • '-' T

    '+'  shift, and go to state 66
    '-'  shift, and go to state 67

    $default  reduce using rule 31 (UNARYEXPR)


State 71

   32 UNARYEXPR: T_DEC E •
   42 E: E • '+' T
   43  | E • '-' T

    '+'  shift, and go to state 66
    '-'  shift, and go to state 67

    $default  reduce using rule 32 (UNARYEXPR)


State 72

   33 UNARYEXPR: E T_INC •

    $default  reduce using rule 33 (UNARYEXPR)


State 73

   34 UNARYEXPR: E T_DEC •

    $default  reduce using rule 34 (UNARYEXPR)


State 74

   61 MAIN: TYPE T_MAIN $@2 '(' • EMPTY_LISTVAR ')' '{' $@3 STMT '}'

    T_ID  shift, and go to state 21

    $default  reduce using rule 63 (EMPTY_LISTVAR)

    LISTVAR        go to state 90
    VAR            go to state 23
    ASSGN          go to state 24
    EMPTY_LISTVAR  go to state 91


State 75

   13 VAR: T_ID '[' EXPR • ']' DIMS
   23 ASSGN: T_ID '[' EXPR • ']' DIMS '=' EXPR
   24      | T_ID '[' EXPR • ']' DIMS '=' UNARYEXPR
   25      | T_ID '[' EXPR • ']' DIMS '=' ARRDEF

    ']'  shift, and go to state 92


State 76

    9 LISTVAR: LISTVAR ',' VAR •

    $default  reduce using rule 9 (LISTVAR)


State 77

    3 START: T_INCLUDE '<' T_HEADER $@1 '>' • PROG

    T_INT     shift, and go to state 1
    T_CHAR    shift, and go to state 2
    T_DOUBLE  shift, and go to state 3
    T_FLOAT   shift, and go to state 4
    T_ID      shift, and go to state 6
    T_VOID    shift, and go to state 7

    $default  reduce using rule 7 (PROG)

    PROG   go to state 93
    DECLR  go to state 10
    TYPE   go to state 11
    ASSGN  go to state 12
    MAIN   go to state 13


State 78

   30 ARRDEF: '{' ARRELEM • '}'

    '}'  shift, and go to state 94


State 79

   27 ARRELEM: EXPR • ',' ARRELEM
   28        | EXPR •

    ','  shift, and go to state 95

    $default  reduce using rule 28 (ARRELEM)


State 80

   48 F: '(' EXPR ')' •

    $default  reduce using rule 48 (F)


State 81

   14 DIMS: '[' • EXPR ']' DIMS

    T_STRLITERAL  shift, and go to state 29
    T_ID          shift, and go to state 30
    T_NUM         shift, and go to state 31
    '('           shift, and go to state 32
    '!'           shift, and go to state 33

    EXPR        go to state 96
    LOGIC_EXPR  go to state 35
    AND_EXPR    go to state 36
    REL_EXPR    go to state 37
    E           go to state 38
    T           go to state 39
    F           go to state 40


State 82

   23 ASSGN: T_ID '[' EXPR ']' DIMS • '=' EXPR
   24      | T_ID '[' EXPR ']' DIMS • '=' UNARYEXPR
   25      | T_ID '[' EXPR ']' DIMS • '=' ARRDEF

    '='  shift, and go to state 97


State 83

   36 LOGIC_EXPR: LOGIC_EXPR T_LOGOR AND_EXPR •
   38 AND_EXPR: AND_EXPR • T_LOGAND REL_EXPR

    T_LOGAND  shift, and go to state 58

    $default  reduce using rule 36 (LOGIC_EXPR)


State 84

   38 AND_EXPR: AND_EXPR T_LOGAND REL_EXPR •
   40 REL_EXPR: REL_EXPR • REL_OP E
